2005-12-30  Roger Sayle  <roger@eyesopen.com>

	PR target/25213
	Backport from mainline
	2005-09-06  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/23098
	* cse.c (fold_rtx_mem): Call delegitimize_address target hook.
	* simplify-rtx.c (constant_pool_reference_p): New function.
	* rtl.h (constant_pool_reference_p): New prototype.
	* config/i386/i386.md (pushf split, mov[sdx]f split): Use
	constant_pool_reference_p in condition and
	avoid_constant_pool_reference in preparation statements.

2005-12-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR fortran/25586
	* pa.md: Remove REG_POINTER check from REG+REG peephole2 floating-point
	store patterns.

2005-12-29  Alan Modra  <amodra@bigpond.net.au>

	PR target/25572
	* config/rs6000/rs6000.c (create_TOC_reference): Set regs_ever_live.

2005-12-17  Steven Bosscher  <stevenb@suse.de>

	PR rtl-optimization/23837
	* optabs.c (expand_binop): For a multi-word rotate, never emit
	a REG_NO_CONFLICT block.

2005-12-16  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2004-11-01  Mike Stump  <mrs@apple.com>

	* inclhack.def (stdio_va_list): Break out clients from here...
	(stdio_va_list_clients): ...to here.  Also, don't fix if stdarg.h is
	included or ifdef va_start.
	* fixincl.x: Regenerate.
	
2005-12-13  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/linux64.h (TARGET_ALIGN_NATURAL): Define.

2005-12-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/25258
	* pa.c (som_text_section_asm_op): Use .NSUBSPA directive when changing
	to the text subspace to output debugging information.

2005-12-06  Alan Modra  <amodra@bigpond.net.au>

	PR other/13873
	* longlong.h: Merge PPC tests from upstream.

2005-12-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR middle-end/25022
	* builtins.c (expand_builtin_fputs, expand_builtin_printf,
	expand_builtin_fprintf): Lookup the explicit replacement functions
	for any unlocked stdio builtin transformations.
